--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-child-ref",
-  "version": "1.0.2-0",
+  "version": "2.0.0",
   "description": "useChildRef is a React hook for getting or creating a child ref",
   "author": "ilvetrov",
   "license": "Apache-2.0",
